[package]
name = "cacao"
description = "Rust bindings for AppKit (macOS/Airyx/GNUStep, beta) and UIKit (iOS/tvOS, alpha)."
version = "0.4.0-beta2"
edition = "2024"
authors = ["Ryan McGrath <ryan@rymc.io>"]
build = "build.rs"
repository = "https://github.com/ryanmcgrath/cacao"
categories = ["gui", "os::macos-apis", "os::ios-apis"]
keywords = ["gui", "macos", "ios", "appkit", "uikit"]
license = "MIT OR MPL-2.0+"

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.docs.rs]
all-features = true
default-target = "aarch64-apple-darwin"
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
bitmask-enum = "2.2.1"
infer = { version = "0.15", optional = true }
lazy_static = "1.4.0"
libc = "0.2"
os_info = "3.0.1"
url = "2.1.1"
uuid = { version = "1.1", features = ["v4"], optional = true }
block2 = "0.6.2"
dispatch2 = "0.3.1"
objc2-core-foundation = "0.3.2"
objc2-core-graphics = "0.3.2"
objc2 = "0.6.4"
objc2-foundation = "0.3.2"

[dev-dependencies]
eval = "0.4"

[features]
appkit = []
uikit = []
autolayout = []
default = ["appkit", "autolayout"]
cloudkit = []
color-fallbacks = []
quicklook = []
user-notifications = ["uuid"]
webview = ["infer"]
webview-downloading-macos = []

[package.metadata.bundle.example.ios-beta]
name = "ios-beta"
identifier = "com.cacao.ios-test"
category = "Developer Tool"
short_description = "An example Cacao iOS app."
long_description = "An example Cacao iOS app."

[[example]]
name = "webview_custom_protocol"
required-features = ["webview"]

[[example]]
name = "browser"
required-features = ["webview"]

[[example]]
name = "ios-beta"
required-features = ["uikit", "autolayout"]

[[example]]
name = "calculator"
required-features = ["appkit"]
[[example]]
name = "todos_list"
required-features = ["appkit"]
[[example]]
name = "animation"
required-features = ["appkit"]
[[example]]
name = "autolayout"
required-features = ["appkit"]
[[example]]
name = "custom_image_drawing"
required-features = ["appkit"]
[[example]]
name = "text_input"
required-features = ["appkit"]
[[example]]
name = "defaults"
required-features = ["appkit"]
[[example]]
name = "frame_layout"
required-features = ["appkit"]
[[example]]
name = "window"
required-features = ["appkit"]
[[example]]
name = "window_delegate"
required-features = ["appkit"]
[[example]]
name = "window_controller"
required-features = ["appkit"]
[[example]]
name = "safe_area"
required-features = ["appkit"]
[[example]]
name = "popover"
required-features = ["appkit"]
